--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-ALL-TIME HOUSTON ROCKETS\
-PG James Harden\
-SG Clyde Drexler\
-SF Tracy McGrady\
-PF Ralph Sampson\
-C Hakeem Olajuwon\
+ALL-TIME HOUSTON ROCKETS  
+PG James Harden  
+SG Clyde Drexler  
+SF Tracy McGrady  
+PF Ralph Sampson  
+C Hakeem Olajuwon  
+  
